@@ -19,6 +19,7 @@
 ### Functionality
 
  - Fix extern "C" macro for using C++ compilers with libsc .c files
+ - Add compiler argument for visibility of extern variables
  - Add sc_MPI_Aint and sc_MPI_Aint_diff
  - Add sc_MPI_UNSIGNED_LONG_LONG, sc_MPI_SIGNED_CHAR and sc_MPI_INT8_T
  - Implement a functional subset of the scda API for parallel I/O
